--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 
 <body>
       <div class="topnav">
-        <a href="#home" style="float: left;">Emilia Hernandez</a>
+        <a href="resume.html">Resume</a>
         <a href="#contact">Contact</a>
         <a href="#justforfun">Just For Fun</a>
+        
         <a href="#work">Work</a>
       </div>
   <!--responsive grid-->
@@ -29,15 +30,13 @@
     <div class= "row" style="height: 30px;"></div>
     <div class="row">
       <div class = "col-1"></div>
-      <div class="col-6">
+      <div class="col">
         <h3>Hello</h3>
-        <p style="font-size: 30px;">I’m Emilia, a student at the University of Central Florida pursuing a B.A in Digital Media, Web Design.
-           I’m Emilia, a student at the University of Central Florida pursuing a B.A in Digital Media, Web Design.
-           I’m Emilia, a student at the University of Central Florida pursuing a B.A in Digital Media, Web Design. </p>
+        <p>I’m Emilia, a student at the University of Central Florida pursuing a B.A in Digital Media, Web Design. I am always looking to make creative and useful improvements in my day-to-day environments using digital technology. I look forward to designing from my heart to the workplace</p>
       </div>
       <div class = "col-1"></div>
       <div class="col">
-        <img src="myself.gif" class="self" style="display: block;margin-left: auto;margin-right: auto;">
+        <img src="myself.gif" class="self" style="display: block;bottom:0">
         <div class="mx-auto" style="  width: 500px;
         height: 500px;
         bottom: 0;
@@ -94,8 +93,9 @@
               <div class="col" id="osiinfo" style="background-color: #ffc83B;">
                 <div class="row">
                 <div class="col-6">
-                  <h3 style="color: white;margin-top: 30px;margin-left: 50px;">pEGASUS pALOOZA</h3>>
-                  <h6 style="color: white; margin-left: 50px;">https://osi.ucf.edu/</h6>
+                  <h3 style="color: black;margin-top: 50px;margin-left: 50px;"class="agency">Pegasus Palooza</h3>
+                  <a href="https://palooza.sdes.ucf.edu/" style="margin-left: 50px">https://palooza.sdes.ucf.edu/</a>
+                  <p style="margin-left: 50px">As UCF’s official Welcome Week, Pegasus Palooza returns every Fall semester with a week full of social, academic, and service activities for students to get acquainted with the UCF campus, meet people, and simply to have fun!</p>
                 </div>
                 <div class="col-6">
                 <img src="osi.gif" style="width: 100%;">
@@ -111,8 +111,9 @@
             <div class="col" id="osiinfo" style="background-color: #201448;">
               <div class="row">
               <div class="col-6">
-                <h3 style="color: white;margin-top: 30px;margin-left: 50px;">Office of Student Involvement(OSI)</h3>>
-                <h6 style="color: white; margin-left: 50px;">https://osi.ucf.edu/</h6>
+                <h3 style="color: white;margin-top: 30px;margin-left: 50px;" class="agency">Office of Student Involvement(OSI)</h3>>
+                <a href="https://osi.ucf.edu/" style="margin-left: 50px;color: white;">https://osi.ucf.edu/</a>
+                <p style="margin-left: 50px;color:white">The Office of Student Involvement (OSI) supports student success and enhances the campus environment by focusing on our core principles – Connect, Involve, Impact -through quality programs, services, student leadership opportunities, and intentional environments.</p>
               </div>
               <div class="col-6">
               <img src="osi.gif" style="width: 100%;">
@@ -127,13 +128,13 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-4" id="container1">
+            <div class="col" id="container1">
               <a href="https://www.instagram.com/p/CV8VoTur-zz/" target="_blank"><img src="RemembranceFlyer.png" class="salir" style="max-width: 100%;height: auto;display: block;"></a>
             </div>
-            <div class="col-4">
+            <div class="col">
 <a href="https://www.instagram.com/p/CU5Sex3LJkd/" target="_blank"><img src="bingo.png" style="max-width: 100%;height: auto;"></a>
             </div>
-            <div class="col-4">
+            <div class="col">
 <a href=""><img src="ReuknightedFinal.png" style="max-width: 100%;height: auto;"></a>
             </div>
           </div>
@@ -158,38 +159,42 @@
 <div class="row">
   <div class="col-6" style="background-color: #150D2E;">
     <div class="row">
-    <div class="col-6">
-      <img src="hertitle.png" style="max-width: 100%;height: auto;">
+    <div class="col">
+      <img src="herbedtimePictures/4R_bZe.png" style="max-width: 100%;height: auto;">
     </div>
-    <div class="col-6">
-      <img src="herclothes.png" style="max-width: 100%;height: auto;">
+    <div class="col">
+      <img src="herbedtimePictures/d6E4Rp.png" style="max-width: 100%;height: auto;">
+    </div>
+    <div class="col">
+      <img src="herbedtimePictures/Y7zFbA.png" style="max-width: 100%;height: auto;">
     </div>
   </div>
   <div class="row">
  <div class="col">
-   <h3 style="color: blanchedalmond; margin-top: 30px;">Her Bedtime Stories</h3>
-   <p style="color: blanchedalmond;">Her Bedtime stories was created in 72 hours for the Ludum Dare Game Jam. It is a game based on the traumas of Sexual Assault. </p>
+   <a style="color: blanchedalmond; margin-top: 30px;font-size: 40px;" href="herbedtimestories.html">Her Bedtime Stories</a>
+   <p style="color: blanchedalmond;font-size: 20px;">Her Bedtime stories was created in 72 hours for the Ludum Dare Game Jam. It is a game based on the traumas of Sexual Assault. </p>
    <br>
    <p style="color: blanchedalmond;">Submitted to Ludum Dare 48 </p>
-   <p style="color: blanchedalmond; background-color: linear-gradient(90deg, #292389 49.91%, rgba(41, 35, 137, 0) 100%); font-size: 12px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+   <a style="color: rgb(235, 156, 37); background-color: linear-gradient(90deg, #292389 49.91%, rgba(41, 35, 137, 0) 100%); font-size: 15px;" href="https://sciences.ucf.edu/news/digital-media-student-raises-mental-illness-awareness-through-video-game/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
     <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-  </svg> Article: "Digital Media Student Raises Mental Illness Awareness Through Video Game"</p>
+  </svg> Article: "Digital Media Student Raises Mental Illness Awareness Through Video Game"</a>
  </div>
   </div>
   </div>
+  <!--same image sizes-->
   <div class="col-6" style="background-color: #201448;">
     <div class="row">
       <div class="col-6">
-        <img src="sstitle.png" style="max-width: 100%;height: auto;">
+        <img src="spiritscoutsPictures/3U1wCf.png" style="max-width: 100%;height: auto;">
       </div>
       <div class="col-6">
-        <img src="ssgame.png" style="max-width: 100%;height: auto;">
+        <img src="spiritscoutsPictures/mdcsri.gif" style="max-width: 100%;height: auto;">
       </div>
     </div>
     <div class="row">
    <div class="col">
-     <h3 style="color: blanchedalmond; margin-top: 30px;">Spirit Scouts</h3>
-     <p style="color: blanchedalmond;">Spirit Scouts is a short game about piecing snippets of information together and pairing souls together.</p>
+     <a style="color: blanchedalmond; margin-top: 30px;font-size: 40px;" href="spiritscouts.html">Spirit Scouts</a>
+     <p style="color: blanchedalmond; font-size: 20px;">Spirit Scouts is a short game about piecing snippets of information together and pairing souls together.</p>
      <br>
      <p style="color: blanchedalmond;">Submitted to Ludum Dare 47 </p>
    </div>
@@ -209,8 +214,8 @@
   </div>
   <div class="row">
  <div class="col">
-   <h3 style="color: blanchedalmond; margin-top: 30px;">Highlights</h3>
-   <p style="color: blanchedalmond;">Spirit Scouts is a short game about piecing snippets of information together and pairing souls together.</p>
+   <a style="color: blanchedalmond; margin-top: 30px;font-size: 40px;" href="highlightsgame.html">Highlights</a>
+   <p style="color: blanchedalmond;font-size: 20px;">Spirit Scouts is a short game about piecing snippets of information together and pairing souls together.</p>
    <br>
    <p style="color: blanchedalmond;">Submitted to Ludum Dare 46 </p>
  </div>
@@ -219,16 +224,16 @@
   <div class="col-6" style="background-color: #D99C00;">
     <div class="row">
       <div class="col-6">
-        <img src="smalltownpreview.JPG" style="max-width: 100%;height: auto;">
+        <img src="smalltown/4d72e83b-8c05-43fa-a741-e253edc2484f_rw_600.png" style="max-width: 100%;height: auto;">
       </div>
       <div class="col-6">
-        <img src="catcap.JPG" style="max-width: 100%;height: auto;">
+        <img src="smalltown/caa4d20b-f624-4a8d-bce9-70fc6b1d69db_rw_600.jpg" style="max-width: 100%;height: auto;">
       </div>
     </div>
     <div class="row">
    <div class="col">
-     <h3 style="color: blanchedalmond; margin-top: 30px;">Smalltown</h3>
-     <p style="color: blanchedalmond;">Spirit Scouts is a short game about piecing snippets of information together and pairing souls together.</p>
+     <h3 style="color: blanchedalmond; margin-top: 30px;font-size: 40px;">Smalltown</h3>
+     <p style="color: blanchedalmond;font-size: 20px;">Spirit Scouts is a short game about piecing snippets of information together and pairing souls together.</p>
      <br>
      <p style="color: blanchedalmond;">Submitted to Ludum Dare 45 </p>
    </div>
@@ -236,20 +241,42 @@
   </div>
 </div>
 <div class="row">
-  <div class="col" style="background-color: whitesmoke;">
+  <div class="col">
     <h3 style="text-align: center; color: black; margin-top: 30px">Contact</h3>
-    <p style="text-align: center; color: black; margin-bottom:30px"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+  </div>
+</div>
+  <div class = "row">
+    <div class="col"></div>
+    <div class= "col">
+    <a style="text-align: center; color: black; margin-bottom:30px" href="mailto:emilia.b.hernandez@gmail.com"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
       <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
-    </svg> Emilia.b.hernandez@gmail.com</p><a href="https://www.linkedin.com/in/emilia-hernandez-560489159/" style="text-align: center;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16"><path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
-    </svg> linkedin</a>
+    </svg>Emilia.b.hernandez@gmail.com</a>
+      </a>
+    </div>
+    <div class="col"></div>
+    </div>
+  <div class="row">
+    <div class="col"></div>
+    <div class="col">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16"><path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
+    </svg><a href="https://www.linkedin.com/in/emilia-hernandez-560489159/"> linkedin</a></div>
+    <div class="col">
     <a href="https://emiliabh.itch.io/" style="text-align: center;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code-slash" viewBox="0 0 16 16">
       <path d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294l4-13zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0z"/>
-    </svg> Itch.io</a>
+    </svg> Itch.io</a></div>
+
+    <div class="col">
+      <a href="https://github.com/emiliahernandez" style="text-align: center;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code-slash" viewBox="0 0 16 16">
+        <path d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294l4-13zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0z"/>
+      </svg> Github</a></div>
+    <div class="col"></div>
   </div>
+  <div class="row" style="height: 100px;"></div>
 </div>
         </div>
       </div>
     </body>
   </div>
+  
 </body>
 </html>
