--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
       <div class = "col-1"></div>
       <div class="col">
         <img src="myself.gif" class="self" style="display: block;bottom:0">
-        <div class="mx-auto" style="  width: 500px;
+        <!--<div class="mx-auto" style="  width: 500px;
         height: 500px;
         bottom: 0;
         background: #0066ff;
         border-radius: 50%;
         position: absolute;
-        z-index: -1;"></div>
+        z-index: -1;"></div>-->
       </div>
       </div>
       <!--Line and Work Section-->
@@ -76,7 +76,7 @@
               <div class="row">
               <div class="col-6">
                 <h3 style="color: black;margin-top: 50px;margin-left: 50px;" class="agency">Student Government</h3>
-                <a href="https://studentgovernment.ucf.edu/" style="margin-left: 50px">https://studentgovernment.ucf.edu/</a>
+                <a href="https://studentgovernment.ucf.edu/" style="margin-left: 50px;color: rgb(131, 0, 76)">https://studentgovernment.ucf.edu/</a>
                 <p style="margin-left: 50px">SG represents, advocates for, and serves, the Student Body. I am personally responsible for the Student Government initiatives tracker</p>
               </div>
               <div class="col-6">
@@ -94,11 +94,11 @@
                 <div class="row">
                 <div class="col-6">
                   <h3 style="color: black;margin-top: 50px;margin-left: 50px;"class="agency">Pegasus Palooza</h3>
-                  <a href="https://palooza.sdes.ucf.edu/" style="margin-left: 50px">https://palooza.sdes.ucf.edu/</a>
+                  <a href="https://palooza.sdes.ucf.edu/" style="margin-left: 50px;color: rgb(131, 0, 76);">https://palooza.sdes.ucf.edu/</a>
                   <p style="margin-left: 50px">As UCF’s official Welcome Week, Pegasus Palooza returns every Fall semester with a week full of social, academic, and service activities for students to get acquainted with the UCF campus, meet people, and simply to have fun!</p>
                 </div>
                 <div class="col-6">
-                <img src="osi.gif" style="width: 100%;">
+                <img src="palooza.gif" style="width: 100%;padding-top: 20px; padding-bottom: 20px;">
               </div>
             </div>
               </div>
@@ -111,12 +111,12 @@
             <div class="col" id="osiinfo" style="background-color: #201448;">
               <div class="row">
               <div class="col-6">
-                <h3 style="color: white;margin-top: 30px;margin-left: 50px;" class="agency">Office of Student Involvement(OSI)</h3>>
-                <a href="https://osi.ucf.edu/" style="margin-left: 50px;color: white;">https://osi.ucf.edu/</a>
+                <h3 style="color: white;margin-top: 30px;margin-left: 50px;" class="agency">Office of Student Involvement(OSI)</h3>
+                <a href="https://osi.ucf.edu/" style="margin-left: 50px;color: rgb(250, 241, 203);">https://osi.ucf.edu/</a>
                 <p style="margin-left: 50px;color:white">The Office of Student Involvement (OSI) supports student success and enhances the campus environment by focusing on our core principles – Connect, Involve, Impact -through quality programs, services, student leadership opportunities, and intentional environments.</p>
               </div>
               <div class="col-6">
-              <img src="osi.gif" style="width: 100%;">
+              <img src="dj.gif" style="width: 100%;padding-top: 20px; padding-bottom: 20px;">
             </div>
           </div>
             </div>
@@ -206,18 +206,18 @@
   <div class="col-6" style="background-color: #FFC83B;">
     <div class="row">
     <div class="col-6">
-      <img src="highlights.png" style="max-width: 100%;height: auto;">
+      <img src="screenshots/highlights1.png" style="max-width: 100%;height: auto;">
     </div>
     <div class="col-6">
-      <img src="highlights2.png" style="max-width: 100%;height: auto;">
+      <img src="screenshots/highlights2.png" style="max-width: 100%;height: auto;">
     </div>
   </div>
   <div class="row">
  <div class="col">
-   <a style="color: blanchedalmond; margin-top: 30px;font-size: 40px;" href="highlightsgame.html">Highlights</a>
-   <p style="color: blanchedalmond;font-size: 20px;">Spirit Scouts is a short game about piecing snippets of information together and pairing souls together.</p>
+   <a style="color: black; margin-top: 30px;font-size: 40px;" href="highlightsgame.html">Highlights</a>
+   <p style="color: black;font-size: 20px;">Highlights is a visual novel about a young adult who had a falling out with many loved ones due to depression. In the game, you decide what key points to bring up in a conversation in hopes of mending different relationships.</p>
    <br>
-   <p style="color: blanchedalmond;">Submitted to Ludum Dare 46 </p>
+   <p style="color: black;">Submitted to Ludum Dare 46 </p>
  </div>
   </div>
   </div>
@@ -232,10 +232,10 @@
     </div>
     <div class="row">
    <div class="col">
-     <h3 style="color: blanchedalmond; margin-top: 30px;font-size: 40px;">Smalltown</h3>
-     <p style="color: blanchedalmond;font-size: 20px;">Spirit Scouts is a short game about piecing snippets of information together and pairing souls together.</p>
+    <a style="color: black; margin-top: 30px;font-size: 40px;" href="smalltowngame.html">Small town</a>
+     <p style="color: black;font-size: 20px;">You’re a hardworking employee and student who forgot to go christmas shopping, problem is: it’s christmas eve and you have nothing . Pick a place to buy the perfect present for your significant other, they deserve the best!</p>
      <br>
-     <p style="color: blanchedalmond;">Submitted to Ludum Dare 45 </p>
+     <p style="color: black;">Submitted to Ludum Dare 45 </p>
    </div>
     </div>
   </div>
@@ -259,14 +259,14 @@
     <div class="col"></div>
     <div class="col">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16"><path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
-    </svg><a href="https://www.linkedin.com/in/emilia-hernandez-560489159/"> linkedin</a></div>
+    </svg><a href="https://www.linkedin.com/in/emilia-hernandez-560489159/" style="color: black;"> linkedin</a></div>
     <div class="col">
-    <a href="https://emiliabh.itch.io/" style="text-align: center;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code-slash" viewBox="0 0 16 16">
+    <a href="https://emiliabh.itch.io/" style="text-align: center;color: black;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code-slash" viewBox="0 0 16 16">
       <path d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294l4-13zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0z"/>
     </svg> Itch.io</a></div>
 
     <div class="col">
-      <a href="https://github.com/emiliahernandez" style="text-align: center;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code-slash" viewBox="0 0 16 16">
+      <a href="https://github.com/emiliahernandez" style="text-align: center;color: black;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code-slash" viewBox="0 0 16 16">
         <path d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294l4-13zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0z"/>
       </svg> Github</a></div>
     <div class="col"></div>
