--- a/resume.html
+++ b/resume.html
@@ -28,11 +28,13 @@
   </head>
 
   <div class="topnav">
-    <a href="index.html#justforfun" style="float: left">Emilia Hernandez</a>
+    <a href="https://emiliahernandez.github.io" style="float: left"
+      >Emilia Hernandez</a
+    >
     <a href="resume.html">Resume</a>
-    <a href="index.html#contact">Contact</a>
-    <a href="index.htmljustforfun">Just For Fun</a>
-    <a href="index.html">Work</a>
+    <a href="https://emiliahernandez.github.io/#contact">Contact</a>
+    <a href="https://emiliahernandez.github.io/#justforfun">Just For Fun</a>
+    <a href="https://emiliahernandez.github.io/#work">Work</a>
   </div>
 
   <nav aria-label="breadcrumb">
@@ -143,9 +145,19 @@
             </h4>
             <h6 class="card-text" style="color: black">May 2021-Present</h6>
             <h6 class="card-text" style="color: black">
-              Collaborates with OSI’s agencies to deliver relevant information
-              via the web to the UCF community. Proficient in Wordpress, PHP,
-              and Bootstrap
+              <li>
+                Collaborates with OSI’s agencies to deliver relevant information
+                via the web to the UCF community.
+              </li>
+              <br />
+              <li>
+                Optimize existing web practices and produce improved runtimes.
+              </li>
+              <br />
+              <li>
+                Design and code new layouts to propose for the Office of Student
+                Involvement, Student Government, and Pegasus Palooza.
+              </li>
             </h6>
           </div>
           <div class="card-body" style="background-color: whitesmoke">
@@ -154,8 +166,16 @@
             </h4>
             <h6 class="card-text" style="color: black">May 2021-Present</h6>
             <h6 class="card-text" style="color: black">
-              Facilitate Roommate disputes, create community events, assist at
-              the front desk, write incident reports.
+              <li>
+                Be available to answer resident questions, respond to incidents,
+                facilitate mediations, write detailed reports, respond to
+                over-night emergencies.
+              </li>
+              <br />
+              <li>
+                Propose events, including budget management, required equipment,
+                and overall details required.
+              </li>
             </h6>
           </div>
           <div class="card-body" style="background-color: whitesmoke">
@@ -168,10 +188,12 @@
                 Association for Computing Machinery - Women in Tech student
                 chapted
               </li>
+              <br />
               <li>
                 Create events, presentations, and programs aimed to support
                 women in tech
               </li>
+              <br />
               <li>Previously Marketing Director for 1 year</li>
             </h6>
           </div>
