--- a/index.html
+++ b/index.html
@@ -205,11 +205,14 @@
 <div class="row">
   <div class="col-6" style="background-color: #FFC83B;">
     <div class="row">
-    <div class="col-6">
-      <img src="screenshots/highlights1.png" style="max-width: 100%;height: auto;">
+    <div class="col">
+      <img src="highlights/SZLusl.png" style="max-width: 100%;height: auto;">
     </div>
-    <div class="col-6">
-      <img src="screenshots/highlights2.png" style="max-width: 100%;height: auto;">
+    <div class="col">
+      <img src="highlights/HGz_SM.png" style="max-width: 100%;height: auto;">
+    </div>
+    <div class="col">
+      <img src="highlights/8GqBsz.png" style="max-width: 100%;height: auto;">
     </div>
   </div>
   <div class="row">
