--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <img src="DesignGroupLogo.png" class="dg">         
 </div>
          <div class="col-5">
-<h4 style="margin-top: 30px;">The OSI Design Group is comprised of Web and Graphic designers who complete orders for various UCF agencies. My title is “Web Designer”, but I have gotten the opportunity to do graphic design as well.</h4>
+<h4 style="margin-top: 80px;">The OSI Design Group is comprised of Web and Graphic designers who complete orders for various UCF agencies. My title is “Web Designer”, but I have gotten the opportunity to do graphic design as well.</h4>
          </div>
           </div>
           <!--Strip with category of Web Design-->
@@ -76,7 +76,7 @@
               <div class="row">
               <div class="col-6">
                 <h3 style="color: black;margin-top: 50px;margin-left: 50px;" class="agency">Student Government</h3>
-                <a href="https://studentgovernment.ucf.edu/" style="margin-left: 50px;color: rgb(131, 0, 76)">https://studentgovernment.ucf.edu/</a>
+                <a href="https://studentgovernment.ucf.edu/" style="margin-left: 50px;color: rgb(0, 47, 255);  margin-top: 5px;">https://studentgovernment.ucf.edu/</a>
                 <p style="margin-left: 50px">SG represents, advocates for, and serves, the Student Body. I am personally responsible for the Student Government initiatives tracker</p>
               </div>
               <div class="col-6">
@@ -94,7 +94,7 @@
                 <div class="row">
                 <div class="col-6">
                   <h3 style="color: black;margin-top: 50px;margin-left: 50px;"class="agency">Pegasus Palooza</h3>
-                  <a href="https://palooza.sdes.ucf.edu/" style="margin-left: 50px;color: rgb(131, 0, 76);">https://palooza.sdes.ucf.edu/</a>
+                  <a href="https://palooza.sdes.ucf.edu/" style="margin-left: 50px;color: rgb(202, 81, 0); margin-top: 5px;">https://palooza.sdes.ucf.edu/</a>
                   <p style="margin-left: 50px">As UCF’s official Welcome Week, Pegasus Palooza returns every Fall semester with a week full of social, academic, and service activities for students to get acquainted with the UCF campus, meet people, and simply to have fun!</p>
                 </div>
                 <div class="col-6">
@@ -112,7 +112,7 @@
               <div class="row">
               <div class="col-6">
                 <h3 style="color: white;margin-top: 30px;margin-left: 50px;" class="agency">Office of Student Involvement(OSI)</h3>
-                <a href="https://osi.ucf.edu/" style="margin-left: 50px;color: rgb(250, 241, 203);">https://osi.ucf.edu/</a>
+                <a href="https://osi.ucf.edu/" style="margin-left: 50px;color: rgb(235, 156, 37); margin-top: 5px;">https://osi.ucf.edu/</a>
                 <p style="margin-left: 50px;color:white">The Office of Student Involvement (OSI) supports student success and enhances the campus environment by focusing on our core principles – Connect, Involve, Impact -through quality programs, services, student leadership opportunities, and intentional environments.</p>
               </div>
               <div class="col-6">
@@ -129,14 +129,17 @@
           </div>
           <div class="row">
             <div class="col" id="container1">
+              <a href="https://www.instagram.com/p/CZsCGnfvWKH/" target="_blank"><img src="Love Gala_Instagram- Twitter.png" class="salir" style="max-width: 100%;height: auto;display: block;"></a>
+            </div>
+            <div class="col">
               <a href="https://www.instagram.com/p/CV8VoTur-zz/" target="_blank"><img src="RemembranceFlyer.png" class="salir" style="max-width: 100%;height: auto;display: block;"></a>
+                          </div>
+            <div class="col">
+<img src="ReuknightedFinal.png" style="max-width: 100%;height: auto;">
             </div>
             <div class="col">
-<a href="https://www.instagram.com/p/CU5Sex3LJkd/" target="_blank"><img src="bingo.png" style="max-width: 100%;height: auto;"></a>
-            </div>
-            <div class="col">
-<a href=""><img src="ReuknightedFinal.png" style="max-width: 100%;height: auto;"></a>
-            </div>
+              <a href="https://www.instagram.com/p/CU5Sex3LJkd/" target="_blank"><img src="bingo.png" style="max-width: 100%;height: auto;"></a>
+                          </div>
           </div>
           <div class="row">
             <div class="line" style="margin-top: 30px;"></div>
@@ -157,24 +160,28 @@
                 </div>
               </div>
 <div class="row">
-  <div class="col-6" style="background-color: #150D2E;">
+  <div class="col-6" style="background-color: #150D2E;padding-top: 20px;">
     <div class="row">
-    <div class="col">
-      <img src="herbedtimePictures/4R_bZe.png" style="max-width: 100%;height: auto;">
+    <div class="col" style="padding-right: 0px;">
+      <img src="herbedtimePictures/herbedtimestories-05.jpg" style="max-width: 100%;height: auto;">
     </div>
-    <div class="col">
-      <img src="herbedtimePictures/d6E4Rp.png" style="max-width: 100%;height: auto;">
+    <div class="col"style="padding-right: 0px;padding-left:0px;">
+      <img src="herbedtimePictures/herbedtimestories-04.jpg" style="max-width: 100%;height: auto;">
     </div>
-    <div class="col">
-      <img src="herbedtimePictures/Y7zFbA.png" style="max-width: 100%;height: auto;">
+    <div class="col" style="padding-left: 0px;">
+      <img src="herbedtimePictures/herbedtimestories-06.jpg" style="max-width: 100%;height: auto;">
     </div>
   </div>
   <div class="row">
- <div class="col">
+ <div class="col" style="padding-top: 20px;">
    <a style="color: blanchedalmond; margin-top: 30px;font-size: 40px;" href="herbedtimestories.html">Her Bedtime Stories</a>
    <p style="color: blanchedalmond;font-size: 20px;">Her Bedtime stories was created in 72 hours for the Ludum Dare Game Jam. It is a game based on the traumas of Sexual Assault. </p>
    <br>
    <p style="color: blanchedalmond;">Submitted to Ludum Dare 48 </p>
+   <a style="color: rgb(235, 156, 37); background-color: linear-gradient(90deg, #292389 49.91%, rgba(41, 35, 137, 0) 100%); font-size: 15px;" href="https://artshumanitiesucf.exposure.co/healingart2022"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+  </svg> Featured: UCF Healing Art Exhibition VIII" - password: Emerging22</a>
+  <br>
    <a style="color: rgb(235, 156, 37); background-color: linear-gradient(90deg, #292389 49.91%, rgba(41, 35, 137, 0) 100%); font-size: 15px;" href="https://sciences.ucf.edu/news/digital-media-student-raises-mental-illness-awareness-through-video-game/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
     <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
   </svg> Article: "Digital Media Student Raises Mental Illness Awareness Through Video Game"</a>
@@ -182,13 +189,16 @@
   </div>
   </div>
   <!--same image sizes-->
-  <div class="col-6" style="background-color: #201448;">
+  <div class="col-6" style="background-color: #201448; padding-top: 20px;">
     <div class="row">
-      <div class="col-6">
-        <img src="spiritscoutsPictures/3U1wCf.png" style="max-width: 100%;height: auto;">
+      <div class="col" style="padding-right: 0px;">
+        <img src="spiritscoutsPictures/spiritscouts-07.jpg" style="max-width: 100%;height: auto;">
       </div>
-      <div class="col-6">
-        <img src="spiritscoutsPictures/mdcsri.gif" style="max-width: 100%;height: auto;">
+      <div class="col" style="padding-right: 0px; padding-left: 0px;">
+        <img src="spiritscoutsPictures/spiritscouts-08.jpg" style="max-width: 100%;height: auto;">
+      </div>
+      <div class="col" style="padding-left: 0px;">
+        <img src="spiritscoutsPictures/spiritscouts-09.jpg" style="max-width: 100%;height: auto;">
       </div>
     </div>
     <div class="row">
@@ -204,15 +214,15 @@
 
 <div class="row">
   <div class="col-6" style="background-color: #FFC83B;">
-    <div class="row">
-    <div class="col">
-      <img src="highlights/SZLusl.png" style="max-width: 100%;height: auto;">
+    <div class="row" style="padding-top: 20px;">
+    <div class="col" style="padding-right: 0px;">
+      <img src="highlights/Highlights-11.jpg" style="max-width: 100%;height: auto;">
     </div>
-    <div class="col">
-      <img src="highlights/HGz_SM.png" style="max-width: 100%;height: auto;">
+    <div class="col" style="padding-right: 0px; padding-left:0px;">
+      <img src="highlights/Highlights-12.jpg" style="max-width: 100%;height: auto;">
     </div>
-    <div class="col">
-      <img src="highlights/8GqBsz.png" style="max-width: 100%;height: auto;">
+    <div class="col" style="padding-left:0px;">
+      <img src="highlights/Highlights-13.jpg" style="max-width: 100%;height: auto;">
     </div>
   </div>
   <div class="row">
@@ -224,13 +234,16 @@
  </div>
   </div>
   </div>
-  <div class="col-6" style="background-color: #D99C00;">
+  <div class="col-6" style="background-color: #D99C00;padding-top: 20px">
     <div class="row">
-      <div class="col-6">
-        <img src="smalltown/4d72e83b-8c05-43fa-a741-e253edc2484f_rw_600.png" style="max-width: 100%;height: auto;">
+      <div class="col" style="padding-right: 0px;">
+        <img src="smalltown/smalltown-01.jpg" style="max-width: 100%;height: auto;">
       </div>
-      <div class="col-6">
-        <img src="smalltown/caa4d20b-f624-4a8d-bce9-70fc6b1d69db_rw_600.jpg" style="max-width: 100%;height: auto;">
+      <div class="col" style="padding-right: 0px; padding-left:0px;">
+        <img src="smalltown/smalltown-02.jpg" style="max-width: 100%;height: auto;">
+      </div>
+      <div class="col" style="padding-left:0px;">
+        <img src="smalltown/smalltown-03.jpg" style="max-width: 100%;height: auto;">
       </div>
     </div>
     <div class="row">
@@ -250,7 +263,7 @@
 </div>
   <div class = "row">
     <div class="col"></div>
-    <div class= "col">
+    <div class= "col" style="text-align: center;"> 
     <a style="text-align: center; color: black; margin-bottom:30px" href="mailto:emilia.b.hernandez@gmail.com"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
       <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
     </svg>Emilia.b.hernandez@gmail.com</a>
@@ -258,12 +271,15 @@
     </div>
     <div class="col"></div>
     </div>
+    <div class = "row">
+      <div class = "col" style="padding: 6px;"></div>
+    </div>
   <div class="row">
     <div class="col"></div>
-    <div class="col">
+    <div class="col" style="text-align: center;">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16"><path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
     </svg><a href="https://www.linkedin.com/in/emilia-hernandez-560489159/" style="color: black;"> linkedin</a></div>
-    <div class="col">
+    <div class="col" style="text-align: center;">
     <a href="https://emiliabh.itch.io/" style="text-align: center;color: black;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code-slash" viewBox="0 0 16 16">
       <path d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294l4-13zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0z"/>
     </svg> Itch.io</a></div>
