--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  
-    </script>
     <link rel="stylesheet" type="text/css" href="../stylez.css" />
     </head>
-    <body style="background-color: rgb(29, 29, 29)">
-WEBSITE UNDER CONSTRUCTION
+    <body style="background-color: rgb(29, 29, 29);color:white">
+    <div class="text-center">
+<h1>WEBSITE UNDER CONSTRUCTION<h1>
+</div>
     </body>
 </html>
