--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="stylez.css">
     </head>
   <body class="dark" style="margin-top: 20%;">
-    <img style="margin: auto; display:block" src="spiritscoutspictures/wjMam_.png" alt="floating heart with windgs in pixelated style">
+    <img style="margin: auto; display:block" src="UnderConstruction.png" alt="floating heart with wings in pixelated style">
     <h3 class="text-wrap text-center">Website Under Construction, check back in December!</h3>
 	<script src="index.js"></script>
   </body>
