--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <body class="dark" style="margin-top: 20%;">
     <img style="margin: auto; display:block" src="UnderConstruction.png" alt="floating heart with wings in pixelated style">
     <h3 class="text-wrap text-center">Website Under Construction, check back in December!</h3>
+    <!--this is a note-->
 	<script src="index.js"></script>
   </body>
 </html>
