--- a/pages/campus-art.html
+++ b/pages/campus-art.html
@@ -119,9 +119,10 @@
                 <li>There will be 200 stickers installed around campus in total</li>
                 <li>The installation may take up to 6 months to a year</li>
             </ul></h6>
+
+    <p class="techUsed largePegasusText"style="padding-left:10%; position: absolute; bottom:0">Technology used: Procreate, Adobe Illustrator</p>
     </div>
     <!--not visible on small screens currently-->
-    <p class="techUsed largePegasusText"style="padding-left:10%; position: absolute; bottom:0">Technology used: Procreate, Adobe Illustrator</p>
 
     <div class="col-sm-1 d-block d-md-none"></div>
     <div class="col-md-1 d-none d-md-block">
@@ -141,6 +142,8 @@ The contest encouraged the use of mascots, so it was an exciting to be able to u
     <li>The installation may take up to 6 months to a year</li>
 </ul>
 </p>
+
+<p class="techUsed largePegasusText" style="margin-top:10%; display: block;">Technology used: Procreate, Adobe Illustrator</p>
 </div>
 <div class="col-2"></div>
 </div>
