--- a/pages/game-design.html
+++ b/pages/game-design.html
@@ -48,10 +48,10 @@
             <div class="row light aAngular" style="text-align: center; background-color: #fff; padding: 10px;margin-top: 4%; margin-bottom: 4%;">
                 <h2 style="background: #fff; color: black">Sensitive Content Warning </h2>
             </div>
-            <div class="row">
+            <div class="row" style="margin:2%">
                 <div class="col-1"></div>
                 <div class="col-2 d-none d-lg-block">
-                    <img src="../4.png" alt="" style="position: sticky; box-shadow: 0px 10px 14px 12px rgba(66, 119, 255, 0.25); width: 80%;"/>
+                    <img src="../4.png" alt="" style="position: relative; box-shadow: 0px 10px 14px 12px rgba(66, 119, 255, 0.25);"/>
                 </div>
 
                 <div class="col-lg-5 col-sm-11 gameDev">
@@ -93,10 +93,10 @@
                 <div class="col-2"></div>
             </div>
 
-            <div class="row starter">
+            <div class="row starter" style="margin:2%">
                 <div class="col-1"></div>
                 <div class="col-2 d-none d-lg-block">
-                    <img alt="" src="../2.png" style="position: sticky; box-shadow: 0px 10px 14px 12px rgba(255, 69, 199, 0.25); width: 80%;"/>
+                    <img alt="" src="../2.png" style="position: relative; box-shadow: 0px 10px 14px 12px rgba(255, 69, 199, 0.25);"/>
                 </div>
 
                 <div class="col-lg-5 col-sm-11 gameDev">
@@ -135,10 +135,10 @@
                 <div class="col-2"></div>
             </div>
 <!--Small Town-->
-            <div class="row starter">
+            <div class="row starter" style="margin:2%">
                 <div class="col-1"></div>
                 <div class="col-2 d-none d-lg-block">
-                    <img alt="" src="../1.png" style="position: sticky; box-shadow: 0px 10px 14px 12px rgba(255, 133, 40, 0.25); width: 80%;"/>
+                    <img alt="" src="../1.png" style="position: relative; box-shadow: 0px 10px 14px 12px rgba(255, 133, 40, 0.25);"/>
                 </div>
 
                 <div class="col-lg-5 col-sm-11 gameDev">
@@ -179,10 +179,10 @@
                 <div class="col-2"></div>
             </div>
 <!--Spirit Scouts-->
-            <div class="row starter">
+            <div class="row starter" style="margin:2%">
                 <div class="col-1"></div>
                 <div class="col-2 d-none d-lg-block">
-                    <img alt="" src="../3.png" style=" position: sticky; box-shadow: 0px 10px 14px 12px rgba(43, 255, 50, 0.25); width: 80%;"/>
+                    <img alt="" src="../3.png" style=" position: relative; box-shadow: 0px 10px 14px 12px rgba(43, 255, 50, 0.25);"/>
                 </div>
 
                 <div class="col-lg-5 col-sm-11 gameDev">
