Additional Changes - file locations
Last couple files that needed to be moved around

--- a/giftesting.html
+++ b/giftesting.html
@@ -35,10 +35,9 @@
   <body>
     <h1 class=" animate__animated animate__headShake">An animated element</h1>
     <div class="gif-player">    
-      <img class="gif" src="mario.png"/>    
-      <img class="gif-play-btn" src="mario.png" />    
+      <img class="gif" src="./assets/myself.gif"/>    
+      <img class="gif-play-btn" src="./assets/mario.png" />    
   </div>
-
     <script>
 function clickFunc() {        
  gif = this;
