--- a/pages/home.html
+++ b/pages/home.html
@@ -50,7 +50,7 @@
         <div class="container-fluid" style="background-color: rgb(32, 32, 32);">
             <div class="row" style="border-bottom: dashed; color: rgb(255, 127, 180);">
                 <div class="col-1 d-lg-none"></div>
-            <div class="col-lg-5 col-10"><p class="text-center dark" style="margin: auto;display: block;">There will be a button and animation here ;)</p></div>
+            <div class="col-lg-5 col-10"><img class="img-responsive" style="display:block; width:-webkit-fill-available" src="../assets/ratPaint.gif"></div>
             <div class="col-1 d-lg-none"></div>
             <div class="col-1 d-lg-none"></div>
             <div class="col-lg-6 col-10 dark">
