Fixed Media Queries
Home page intro paragraph was not looking right

--- a/pages/home.html
+++ b/pages/home.html
@@ -54,8 +54,8 @@
             <div class="col-1 d-lg-none"></div>
             <div class="col-1 d-lg-none"></div>
             <div class="col-lg-6 col-10 dark">
-                <h1 class="dark animate__animated animate__headShake starter text-wrap">I'm Emilia: Your digital media friend and fiend</h1>
-                <h2 class="text-wrap" style="padding-bottom: 10%">As a creator, I am resourceful, imaginative, and colorful with my work. I enjoy making work that is evocative, and strive to design and develop eye-grabbing media. Ultimately, my goal is to continue to work in professional web development environments. I love to learn any new software I can get my hands on, so for fun, you will find other goodies on this site :)</h2>
+                <h1 class="introductionHead dark animate__animated animate__headShake text-wrap starter-small">I'm Emilia: Your digital media friend and fiend</h1>
+                <h2 class="text-wrap introductionText" style="padding-bottom: 10%">As a creator, I am resourceful, imaginative, and colorful with my work. I enjoy making work that is evocative, and strive to design and develop eye-grabbing media. Ultimately, my goal is to continue to work in professional web development environments. I love to learn any new software I can get my hands on, so for fun, you will find other goodies on this site :)</h2>
             </div>
             <div class="col-1 dark"></div>
         </div>
