image location fix
graphic design pictures were not displayed properly on mobile, changed src

--- a/pages/graphic-design.html
+++ b/pages/graphic-design.html
@@ -76,16 +76,16 @@
 <div class="container-fluid d-none d-md-block d-lg-none">
     <div class="row">
                 <div class="col-md-6 d-none d-md-block lg-none">
-                    <img src="../RemembranceFlyer.png" style="width:100%; border: 10px solid #ffffff" alt="Transgender day of remembrance event flyer design, lit candles in pink, blue, and white">
+                    <img src="../assets/RemembranceFlyer.png" style="width:100%; border: 10px solid #ffffff" alt="Transgender day of remembrance event flyer design, lit candles in pink, blue, and white">
                 </div>
                 <div class="col-md-6 d-none d-md-block">
-                    <img src="../Love Gala_Instagram- Twitter.png" style="width:100%; border: 10px solid #ffffff" alt="Love Gala event flyer design, person holding paper heart going into envelope">
+                    <img src="../assets/Love Gala_Instagram- Twitter.png" style="width:100%; border: 10px solid #ffffff" alt="Love Gala event flyer design, person holding paper heart going into envelope">
                 </div>
                 <div class="col-md-6 d-none d-md-block">
-                    <img src="../bingo.png" style="width:100%; border: 10px solid #ffffff" alt="Bingo knight event flyer, knightro scoring bingo">
+                    <img src="../assets/bingo.png" style="width:100%; border: 10px solid #ffffff" alt="Bingo knight event flyer, knightro scoring bingo">
                 </div>
                 <div class="col-md-6 d-none d-md-block">
-                    <img src="../ReuknightedFinal.png" style="width:100%; border: 10px solid #ffffff" alt="Reuknighted:lgbt q&a panel, 4 people on zoom talking">
+                    <img src="../assets/ReuknightedFinal.png" style="width:100%; border: 10px solid #ffffff" alt="Reuknighted:lgbt q&a panel, 4 people on zoom talking">
                 </div>
               </div>
         </div>
@@ -95,7 +95,7 @@
                 <div class="col-sm-1"></div>
                 <div class="col-sm-10"  style="display: flex;
                 justify-content: center;">
-                    <img src="../RemembranceFlyer.png" style="width:100%; border: 10px solid #ffffff" alt="Transgender day of remembrance event flyer design, lit candles in pink, blue, and white">
+                    <img src="../assets/RemembranceFlyer.png" style="width:100%; border: 10px solid #ffffff" alt="Transgender day of remembrance event flyer design, lit candles in pink, blue, and white">
                 </div>
                 <div class="col-sm-1"></div>
             </div>
@@ -103,7 +103,7 @@
             <div class="row starter">
                 <div class="col-sm-1"></div>
                 <div class="col-sm-10" style="display: flex;justify-content: center;">
-                    <img src="../Love Gala_Instagram- Twitter.png" style="width:100%; border: 10px solid #ffffff" alt="Love Gala event flyer design, person holding paper heart going into envelope">
+                    <img src="../assets/Love Gala_Instagram- Twitter.png" style="width:100%; border: 10px solid #ffffff" alt="Love Gala event flyer design, person holding paper heart going into envelope">
                 </div>
                 <div class="col-sm-1"></div>
             </div>
@@ -111,7 +111,7 @@
             <div class="row starter">
                 <div class="col-1"></div>
                 <div class="col-10" style="display: flex;justify-content: center;">
-                    <img src="../ReuknightedFinal.png" style="width:100%; border: 10px solid #ffffff" alt="Reuknighted:lgbt q&a panel, 4 people on zoom talking">
+                    <img src="../assets/ReuknightedFinal.png" style="width:100%; border: 10px solid #ffffff" alt="Reuknighted:lgbt q&a panel, 4 people on zoom talking">
                 </div>
                 <div class="col-1"></div>
             </div>
@@ -119,7 +119,7 @@
             <div class="row starter">
                 <div class="col-sm-1"></div>
                 <div class="col-10" style="display: flex;justify-content: center;">
-                    <img src="../bingo.png" style="width:100%; border: 10px solid #ffffff" alt="Bingo knight event flyer, knightro scoring bingo">
+                    <img src="../assets/bingo.png" style="width:100%; border: 10px solid #ffffff" alt="Bingo knight event flyer, knightro scoring bingo">
                 </div>
                 <div class="col-sm-1"></div>
             </div>
