--- a/pages/home.html
+++ b/pages/home.html
@@ -48,7 +48,7 @@
           </nav>
 
         <div class="container-fluid" style="background-color: rgb(32, 32, 32);">
-            <div class="row" style="border-bottom: dashed; color: rgb(255, 127, 180);">
+            <div class="row">
                 <div class="col-1 d-lg-none"></div>
             <div class="col-lg-5 col-10"><img class="img-responsive" style="display:block; width:-webkit-fill-available" src="../assets/ratPaint.gif"></div>
             <div class="col-1 d-lg-none"></div>
@@ -147,7 +147,10 @@
                     <h4 class="dark text-wrap">Personal</h1>
                 </div>
 
-
+            </div>
+        </div>
+        <div>
+            <h4 class="dark starter-small text-center">Site Developed by Emilia Hernandez</h4>
         </div>
     </body>
 </html>
