--- a/pages/trashy-animals.html
+++ b/pages/trashy-animals.html
@@ -102,12 +102,12 @@
                     <div class="col-md">
                     </div>
                     <div class="col-md-5">
-                        <img src="../assets/sad frog 1.jpg" style="width:100%; border: 10px solid #ffffff" alt="Illustration of Frog holding a heart, bitten ear, and rugged appearance">
+                        <img src="../assets/Sad frog 1.jpg" style="width:100%; border: 10px solid #ffffff" alt="Illustration of Frog holding a heart, bitten ear, and rugged appearance">
                     </div>
                     <div class="col-md">
                     </div>
                     <div class="col-md-5">
-                        <img src="../assets/sad rac 1.jpg" style="width:100%; border: 10px solid #ffffff" alt="Illustration of raccoon holding a heart, bitten ear, and rugged appearance">
+                        <img src="../assets/Sad rac 1.jpg" style="width:100%; border: 10px solid #ffffff" alt="Illustration of raccoon holding a heart, bitten ear, and rugged appearance">
                     </div>
                     <div class="col-md">
                     </div>
@@ -135,7 +135,7 @@
                 <div class="row starter">
                     <div class="col-1"></div>
                     <div class="col-10" style="display: flex;justify-content: center;">
-                        <img src="../assets/sad rac 1.jpg" style="width:100%; border: 10px solid #ffffff" alt="Illustration of raccoon holding a heart, bitten ear, and rugged appearance">
+                        <img src="../assets/Sad rac 1.jpg" style="width:100%; border: 10px solid #ffffff" alt="Illustration of raccoon holding a heart, bitten ear, and rugged appearance">
                     </div>
                     <div class="col-1"></div>
                 </div>
