--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,7 @@
     <main id="contentCards">
       <h1>Select to your <span class="material-symbols-outlined">
         favorite
-        </span>'s content</h1>
-        <div class="all-elephant-cards" ></div>
+        </span>'s content</h1><div class="all-elephant-cards" ></div>
     </main>
 
     <script type="module" src="app.js"></script>
