--- a/pages/resume.html
+++ b/pages/resume.html
@@ -62,10 +62,10 @@
   <div class="row g-0">
     <div class="col-lg-1 col-1"></div>
     <div class="col-lg-4 col-10">
-      <img src="..."></div>
+      </div>
     <div class="col-lg-6 col-10 aAngular dark vertical-align">
-      <h2 class="vertical-align">Emilia Hernandez</h2>
-      <h3>Orlando, FL</h3>
+      <h2 class="vertical-align">I don't like this anymore</h2>
+      <h3>!!!</h3>
     </div>
     <div class="col-lg-1 col-1"></div>
   </div>
