--- a/pages/Compare-palooza.html
+++ b/pages/Compare-palooza.html
@@ -31,7 +31,6 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-          
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
@@ -52,33 +51,38 @@
               </ul>
             </div>
           </nav>
-    <div class="row starter">
-<h1 style="margin: auto; color: aliceblue;padding-top: 2%;">Then/Now</h1>
-    </div>
-    <div class="row">
-<p style="margin: auto; color: aliceblue;padding-top: 2%;">Toggle to view the three pages that were completely redesigned one year apart for the same event, with a different brand guide.</p>
-</div>
-
 
     <div class="row">
+      <div class="col-1"></div>
+      <div class="col-10">
+        <div class="row starter">
+          <h1class="comparing-web">Then/Now</h1>
+              </div>
+              <div class="row">
+          <pclass="comparing-web">Toggle to view the three pages that were completely redesigned one year apart for the same event, with a different brand guide.</p>
+          </div>
       <div class="btn-group d-grid mx-auto" style="padding-top: 2%;padding-bottom: 2%;" role="group" aria-label="Basic outlined example">
         <a type="button" href="Compare-palooza.html" class="btn btn-outline-light">Home</a>
         <a type="button" href="compare-palooza-about.html" class="btn btn-outline-light">About</a>
         <a type="button" href="compare-palooza-events.html" class="btn btn-outline-light">Events</a>
-      </div>
+      </div></div>
+      <div class="col-1"></div>
 </div>
 
 <div class="row" style="padding-bottom: 2%;">
   <div class="col text-center">
-    <h2 style="margin: auto; color: aliceblue;padding-top: 2%;">2021</h2>
+    <h2 class="comparing-web">2021</h2>
   </div>
   <div class="col text-center">
-  <h2 style="margin: auto; color: aliceblue;padding-top: 2%;">2022</h2>
+  <h2class="comparing-web">2022</h2>
   </div>
   </div>
           <div class="row">
               <div class="col" style="padding: 0;">
             <img src="../screenshots/home2021.png" style="width:90%; padding: none; display: block; margin:auto" alt="2021 version of pegasus palooza home page">
+        
+            <p class="light infoTron">We determined that the home page was not reflective of the brand guide that is created each year. Throughout the years, only the imagery changes, which is not built to be responsive from previous developers. The existing Wordpress theme only accepted one image for the slideshow billboard, and on most screens, the images were cropped. My specific contributions to this redesign were: creating the illustrated hero image, as well as developing the new cards which include descriptions of the other links found in the menu.</p>
+          </div>
         </div>    
         <div class="col" style="padding: 0;">
           <img src="../screenshots/home2022.png" style="width:90%; padding: none; display: block; margin:auto" alt="2022 version of pegasus palooza home page">
