--- a/pages/home.html
+++ b/pages/home.html
@@ -129,7 +129,7 @@
 
             <!--web design-->
                 <div class="col-lg-6 col-12 order-lg-2 dark second-col-start">
-                    <a href="anotherthing.html"><img class="mx-auto d-block preview-img" src=""></a>
+                    <a href="anotherthing.html"><img class="mx-auto d-block preview-img" src="../assets/salir.png"></a>
                 </div>
                     <!--web design-->
                 <div class="col-lg-6 col-12 order-lg-4 dark second-col-center">
